--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.16.6",
