--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.47.10",
+    "expo-asset": "^11.0.1",
+    "expo-font": "^13.0.2",
+    "expo-linear-gradient": "^14.0.1",
+    "expo-modules-core": "^2.1.2",
+    "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.7",
     "react-dom": "^18.3.1",
@@ -28,6 +36,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-phone-number-input": "^2.1.0",
@@ -35,7 +44,8 @@
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
