--- a/package.json
+++ b/package.json
@@ -3,49 +3,53 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "expo start",
     "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-masked-view/masked-view": "^0.2.9",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "@supabase/supabase-js": "^2.47.10",
-    "expo-asset": "^11.0.1",
-    "expo-font": "^13.0.2",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-modules-core": "^2.1.2",
-    "lottie-react-native": "^7.1.0",
-    "react": "^18.3.1",
-    "react-country-state-city": "^1.1.7",
-    "react-dom": "^18.3.1",
-    "react-native": "^0.76.5",
+    "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.7.9",
+    "expo": "^52.0.31",
+    "expo-asset": "^11.0.3",
+    "expo-font": "^13.0.3",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-modules-core": "^2.2.0",
+    "expo-splash-screen": "^0.17.3",
+    "lottie-react-native": "^7.2.2",
+    "react": "18.3.1",
+    "react-native": "0.77.0",
+    "react-native-animatable": "^1.4.0",
     "react-native-config": "^1.5.3",
-    "react-native-country-picker-modal": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-image-picker": "^7.2.3",
+    "react-native-image-picker": "^8.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.13.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.14"
@@ -57,15 +61,13 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
-    "@react-native/metro-config": "0.76.5",
-    "@react-native/typescript-config": "0.76.5",
+    "@react-native/babel-preset": "0.77.0",
+    "@react-native/eslint-config": "0.77.0",
+    "@react-native/metro-config": "0.77.0",
+    "@react-native/typescript-config": "0.77.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
-    "@types/react-native": "^0.72.8",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
