--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.0.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper": "^5.13.1",
     "react-native-phone-number-input": "^2.1.0",
