--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper": "^5.13.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
